# ip_calculator

./: README.md  pyproject.toml
src/: ip_calclator.py
src/ip_calculator/: __main__.py  ip_calculator.py
