[project]
name = "ip_calculator"
version = "1.0.0"
description = "IP address calculator"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  { name = "Masaya Takahashi" },
]

[project.scripts]
ipcal = "ip_calculator.ip_calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
